--- a/src/css/Game.css
+++ b/src/css/Game.css
@@ -19,11 +19,16 @@
     margin: 1% 3% 1% 3%
 }
 
-.countryName, .guess {
+.countryName, .capitalName, .guess {
     text-align: center;
     font-size: 2.5em;
     margin: 0 3% 3% 3%;
     text-align: center;
+}
+
+.capitalName {
+    color: rgb(169, 5, 5);
+    font-size: 1em;
 }
 
 .form {
