--- a/src/css/Game.css
+++ b/src/css/Game.css
@@ -4,12 +4,6 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.mainHeading {
-    color: black;
-    padding: 1%;
-    font-weight: bold;
-}
-
 .countryHeader, .guessHeader {
     color: white;
     background-color: rgb(0, 0, 0);
@@ -35,6 +29,43 @@
     margin-top: 0;
 }
 
-.streak {
+.totalCorrect, .streak, .time {
     font-weight: bold;
 }
+
+.skip-replacement {
+    margin: 2.8% 35% 0 35%;
+    padding: 1%;
+
+    font-size: 0.4em;
+    background-color: #ffc808;
+    border-radius: 20%;
+}
+
+.form-stats {
+    margin: 0 40% 0 40%;
+    padding: 2.5%;
+
+}
+
+.stat-value {
+    font-weight: normal;
+}
+
+.btn-restart {
+    margin-top: 5%;
+}
+
+.btn-backToMenu {
+    margin-top: 12%;
+}
+
+
+
+
+
+
+  
+  
+  
+
